--- a/about.html
+++ b/about.html
@@ -50,16 +50,16 @@
             <div class="row py-5 ">
                 <div class="col-md-12 pt-3 text-center">
                     <h1>About Me</h1>
-                    <h2 class = "pt-5">A mother of three children. A passion for technology. Pursuing a career in Software Development.</h2>
+                    <h2 class = "pt-5" id="bioAboutHeader"></h2>
                 </div>
             </div>
         </div>
 
         <div class="container-fluid aboutContainer">
             <div class="row m-4 justify-content-end">
-                <div class="col-md-6 pt-5" id="whiteText">
-                    <h3 class="pb-5 text-center">My Passions and Personality</h3>
-                    <p class= "pb-5">I live in Barton-Under-Needwood, a coutryside village in the West Midlands. I have a love for Sports and Travel. I am a retired 
+                <div class="col-md-6 pt-5">
+                    <h3 class="pb-5 text-center" id="whiteTextTitle">My Passions and Personality</h3>
+                    <p class= "pb-5 whiteText" >I live in Barton-Under-Needwood, a coutryside village in the West Midlands. I have a love for Sports and Travel. I am a retired 
                         semi-professional snowboarder and national level gymnasts and have lived and worked
                         in various countries around the world for ten years.
                         I manage two property lets and have developed three properties.
@@ -118,14 +118,14 @@
             
         <div class="container-fluid">
             <div class="row py-5 align-items-center">
-                <div class="col-md-6 text-center">
+                <div class="col-md-6 col-sm-x2 text-center">
                     <h3 class="pb-5">Computer Science</h3>
                     <p class="pb-3">My dad is a retired Systems Engineer and I have grown up surrounded by the latest technology. After retiring from snowboarding, I built a website 
                     for my partner's carpentry business, this was the beginning of my interest in computer Science. The realisation of the sheer scope of opportunity, creativity and learning available has left me inspired to 
                     pursue a career in Software Development.</p>
                     <a href="portfolio.html" class="btn btn-primary btn-blackText" role="button">View My Work</a>
                 </div>
-                <div class="col-md-6 laptop text-center">
+                <div class="col-md-6 col-xm-12 laptop text-center">
                     <img src="static/laptop1.jpg" alt="laptop">
                 </div>
             </div>
@@ -138,7 +138,7 @@
             <!-- Grid row -->
                 <div class="row py-5">
                     <!-- Grid column -->
-                    <div class="col-md-12 footer" id = "whiteText">
+                    <div class="col-md-12 footer whiteText">
                         <!-- Content -->
                         <h5>Contact</h5>
                         <p>Barton under Needwood, Burton-on-Trent, Staffordshire. DE13 8LH</p>
