--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <footer class="page-footer font-small">
             <div class="container-fluid text-center">
                 <div class="row py-5">
-                    <div class="col-md-12 footer" id = "whiteText">
+                    <div class="col-md-12 footer whiteText">
                         <!-- Content -->
                         <h5>Contact</h5>
                         <p>Barton under Needwood, Burton-on-Trent, Staffordshire. DE13 8LH</p>
