--- a/portfolio.html
+++ b/portfolio.html
@@ -99,7 +99,7 @@
                 <!--Grid row-->
                 <div class="row py-5">
                     <!-- Grid column -->
-                    <div class="col-md-12 footer" id = "whiteText">
+                    <div class="col-md-12 footer whiteText">
                         <!-- Content -->
                         <h5>Contact</h5>
                         <p>Barton under Needwood, Burton-on-Trent, Staffordshire. DE13 8LH</p>
