--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
         
         <!--main content-->
         <div class="container-fluid greyContainer">
-            <div class="row py-5">
+            <div class="row">
                 <div class="col-md-12">
-                    <h3 class="text-center">Skills and Experience</h3>
+                    <h3>Skills and Experience</h3>
                 </div>
             </div>
             <div class="row py-5">
@@ -104,15 +104,15 @@
                 </div>
                 <div class ="col-md-6 col-sm-12 text-center">
                     <p>For a closer look at what I can do, please view my CV</p>
-                    <a href="cv.html" class="btn btn-lg btn-blackText" role="button">View My CV</a>
+                    <a href="cv.html" class="btn btn-blackText btn-lg" role="button">View My CV</a>
                 </div>
             </div>
         </div>
 
 
         <div class="container-fluid">
-            <div class="row py-5">
-                <div class="col-md-12 text-center">
+            <div class="row">
+                <div class="col-md-12">
                     <h3>My Life</h3>
                 </div>
             </div>
@@ -132,7 +132,7 @@
             </div>
             <div class="row py-5">
                 <div class="col-md-12 text-center">
-                    <a href="about.html" class="btn btn-lg btn-blackText" role="button">Learn More About Me</a>
+                    <a href="about.html" class="btn btn-lg btn-blackText mb-5" role="button">Learn More About Me</a>
                 </div>
             </div>
         </div>
@@ -165,7 +165,7 @@
                             </li>
                         </ul>
                         <!-- Copyright -->
-                        <div class="footer-copyright text-center">© 2020 Copyright:
+                        <div class="footer-copyright">© 2020 Copyright:
                             <a href="info@katewood.uk">info@katewood.uk</a>
                         </div>
                     </div>
