--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
             </nav>
        
         <!-- main content-->
-            <div class="row py-5 ">
-                <div class="col-md-12 pt-3 text-center">
+            <div class="row py-5">
+                <div class="col-md-12 pt-3">
                     <h1>About Me</h1>
                     <h2 class = "pt-5" id="bioAboutHeader"></h2>
                 </div>
@@ -57,8 +57,8 @@
 
         <div class="container-fluid aboutContainer">
             <div class="row m-4 justify-content-end">
-                <div class="col-md-6 pt-5">
-                    <h3 class="pb-5 text-center" id="whiteTextTitle">My Passions and Personality</h3>
+                <div class="col-md-6">
+                    <h3 id="whiteTextTitle">My Passions and Personality</h3>
                     <p class= "pb-5 whiteText" >I live in Barton-Under-Needwood, a coutryside village in the West Midlands. I have a love for Sports and Travel. I am a retired 
                         semi-professional snowboarder and national level gymnasts and have lived and worked
                         in various countries around the world for ten years.
@@ -69,8 +69,8 @@
         </div>
 
         <div class="container-fluid greyContainer">
-            <div class="row py-5">
-                <div class="col-md-12 text-center">
+            <div class="row">
+                <div class="col-md-12">
                     <h3>My Life in Pictures</h3>
                 </div>
             </div>
@@ -116,14 +116,14 @@
             </div>
         </div>
             
-        <div class="container-fluid">
-            <div class="row py-5 align-items-center">
-                <div class="col-md-6 col-sm-x2 text-center">
-                    <h3 class="pb-5">Computer Science</h3>
+        <div class="container-fluid text-center">
+            <div class="row align-items-center">
+                <div class="col-md-6 col-sm-12">
+                    <h3>Computer Science</h3>
                     <p class="pb-3">My dad is a retired Systems Engineer and I have grown up surrounded by the latest technology. After retiring from snowboarding, I built a website 
                     for my partner's carpentry business, this was the beginning of my interest in computer Science. The realisation of the sheer scope of opportunity, creativity and learning available has left me inspired to 
                     pursue a career in Software Development.</p>
-                    <a href="portfolio.html" class="btn btn-primary btn-blackText" role="button">View My Work</a>
+                    <a href="portfolio.html" class="btn btn-primary btn-blackText mb-5" role="button">View My Work</a>
                 </div>
                 <div class="col-md-6 col-xm-12 laptop text-center">
                     <img src="static/laptop1.jpg" alt="laptop">
