--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,8 @@
        
         <!-- main content-->
 
-            <div class="row justify-content-start">
-                <div class="col-md-6 col-sm-12 pr-5 text-center">
+            <div class="row">
+                <div class="col-md-6 col-sm-12 pr-5">
                     <h1>Connect with me</h1>
                 </div>
             </div>
