--- a/cv.html
+++ b/cv.html
@@ -54,8 +54,8 @@
         </div>
         
         <div class="container-fluid">
-            <div class="row py-5">
-                <div class="col-md-12 text-center">
+            <div class="row">
+                <div class="col-md-12">
                     <h3>Languages and Technologies</h3>
                 </div>
             </div>
