--- a/portfolio.html
+++ b/portfolio.html
@@ -58,10 +58,10 @@
 
 
         <div class = "container-fluid">
-            <div class="row py-5 text-center">
+            <div class="row">
                 <div class="col-md-12">
                     <h3>Completed Projects</h3>
-                    <h6 class="pt-5">Here you can find the projects I have completed in my Computer Science Courses</h6>
+                    <h6 class="pb-5 text-center">Here you can find the projects I have completed in my Computer Science Courses</h6>
                 </div>
             </div>
             <div class="row justify-content-around py-5">
