clean up on all files pre submit

--- a/cv.html
+++ b/cv.html
@@ -48,7 +48,7 @@
             <div class="row py-5">
                 <div class="col-md-12 text-center">
                     <h1 class="pb-5">My Skills and Experiences</h1>
-                    <a href="static/cv.pdf" class="btn btn-primary btn-lg">Download cv</a>
+                    <a href="static/cv.pdf" class="btn btn-whiteText btn-lg">Download cv</a>
                 </div>
             </div>
         </div>
@@ -100,16 +100,16 @@
                         <!-- Links -->
                         <ul class="list-unstyled">
                             <li>
-                                <a href="#!">Portfolio</a>
+                                <a href="portfolio.html">Portfolio</a>
                             </li>
                             <li>
-                                <a href="#!">About</a>
+                                <a href="about.html">About</a>
                             </li>
                             <li>
-                                <a href="#!">CV</a>
+                                <a href="cv.html">CV</a>
                             </li>
                             <li>
-                                <a href="#!">Contact</a>
+                                <a href="contact.html">Contact</a>
                             </li>
                         </ul>
                         <!-- Copyright -->
