--- a/portfolio.html
+++ b/portfolio.html
@@ -57,7 +57,7 @@
         </div>
 
 
-        <div class = "container-fluid">
+        <div class = "container-fluid mb-5">
             <div class="row">
                 <div class="col-md-12">
                     <h3>Completed Projects</h3>
@@ -69,25 +69,25 @@
                     <h4 class=" pt-3 pb-3">A Blog</h4>
                     <p>This blog was created by a collaborative team of 4 people as a final 
                     project in my Sky 'get into tech' course</p>
-                    <a href="https://github.com/katewoodsnow/TravelBlog-SKY.git" class="btn btn-primary btn-sm m-3" role="button">View my code on Github</a>
+                    <a href="https://github.com/katewoodsnow/TravelBlog-SKY.git" class="btn btn-blackText btn-sm m-3" role="button">View my code on Github</a>
                 </div>
                 <div class="col-md-4 col-xs-12 border text-center">
                     <h4 class="pt-3 pb-3">A Website</h4>
                     <p>This <a href="https://katewoodsnow.github.io/project0/index.html">website</a> was created by a collaborative team of 4 people as a final 
                     project in my Sky 'get into tech course'</p>
-                    <a href="https://github.com/katewoodsnow/CS50-Final-Project.git" class="btn btn-primary btn-sm m-3" role="button">View my code on Github</a>
+                    <a href="https://github.com/katewoodsnow/CS50-Final-Project.git" class="btn btn-blackText btn-sm m-3" role="button">View my code on Github</a>
                 </div>
             </div>
             <div class="row justify-content-around py-5">
                 <div class="col-md-4 col-xs-12 border text-center">
                     <h4 class="pt-3 pb-3 text-center">A Spell Checker</h4>
                     <p>This spell checker was created as final project in my CS50 Introduction to Computer Science course</p>
-                    <a href="https://github.com/katewoodsnow/spell-checker.git" class="btn btn-primary btn-sm m-3" role="button">View my code on Github</a>
+                    <a href="https://github.com/katewoodsnow/spell-checker.git" class="btn btn-blackText btn-sm m-3" role="button">View my code on Github</a>
                 </div>
                 <div class="col-md-4 col-xs-12 border text-center">
                     <h4 class="pt-3 pb-3 text-center">A Maze Solver</h4>
                     <p>This maze solver was created as an assignment for my Programming in C course</p>
-                    <a href="https://github.com/katewoodsnow/maze-solver.git" class="btn btn-primary btn-sm m-3" role="button">View my code on Github</a>
+                    <a href="https://github.com/katewoodsnow/maze-solver.git" class="btn btn-blackText btn-sm m-3" role="button">View my code on Github</a>
                 </div>
             </div>
         </div>
@@ -108,16 +108,16 @@
                         <!-- Links -->
                         <ul class="list-unstyled">
                             <li>
-                                <a href="#!">Portfolio</a>
+                                <a href="portfolio.html">Portfolio</a>
                             </li>
                             <li>
-                                <a href="#!">About</a>
+                                <a href="about.html">About</a>
                             </li>
                             <li>
-                                <a href="#!">CV</a>
+                                <a href="cv.html">CV</a>
                             </li>
                             <li>
-                                <a href="#!">Contact</a>
+                                <a href="contact.html">Contact</a>
                             </li>
                         </ul>
                         <!-- Copyright -->
