--- a/about.html
+++ b/about.html
@@ -147,16 +147,16 @@
                         <!-- Links -->
                         <ul class="list-unstyled">
                             <li>
-                                <a href="#!">Portfolio</a>
+                                <a href="portfolio.html">Portfolio</a>
                             </li>
                             <li>
-                                <a href="#!">About</a>
+                                <a href="about.html">About</a>
                             </li>
                             <li>
-                                <a href="#!">CV</a>
+                                <a href="cv.html">CV</a>
                             </li>
                             <li>
-                                <a href="#!">Contact</a>
+                                <a href="contact.html">Contact</a>
                             </li>
                         </ul>
                         <!-- Copyright -->
