--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,6 @@
         <link href="static/style.css" rel="stylesheet">
         
         <title>Contact</title>
-       
     </head>
     <body>
         <!-- navbar-->
@@ -170,7 +169,7 @@
                     </div>
                 </div>
                 <div class="form-row justify-content-md-center py-5">
-                    <button class="btn-sm btn-primary" type="submit">Connect With Me</button>
+                    <button class="btn-sm btn-blackText" type="submit">Connect With Me</button>
                 </div>
             </form>
         </div>
@@ -195,16 +194,16 @@
                         <!-- Links -->
                         <ul class="list-unstyled">
                             <li>
-                                <a href="#!">Portfolio</a>
+                                <a href="portfolio.html">Portfolio</a>
                             </li>
                             <li>
-                                <a href="#!">About</a>
+                                <a href="about.htl">About</a>
                             </li>
                             <li>
-                                <a href="#!">CV</a>
+                                <a href="cv.html">CV</a>
                             </li>
                             <li>
-                                <a href="#!">Contact</a>
+                                <a href="contact.html">Contact</a>
                             </li>
                         </ul>
                         <!-- Copyright -->
