--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="col-md-6 col-sm-12 text-center pr-5">
                         <h1>Katie Wood</h1>
                         <h2>Computer Science Student</h2>
-                        <a href="portfolio.html" class="btn btn-primary btn-lg" role="button">View My Work</a>
+                        <a href="portfolio.html" class="btn btn-whiteText btn-lg" role="button">View My Work</a>
                     </div>
                 </div>
             </header>  
@@ -151,16 +151,16 @@
                         <!-- Links -->
                         <ul>
                             <li>
-                                <a href="#!">Portfolio</a>
+                                <a href="portfolio.html">Portfolio</a>
                             </li>
                             <li>
-                                <a href="#!">About</a>
+                                <a href="about.html">About</a>
                             </li>
                             <li>
-                                <a href="#!">CV</a>
+                                <a href="cv.html">CV</a>
                             </li>
                             <li>
-                                <a href="#!">Contact</a>
+                                <a href="contact.html">Contact</a>
                             </li>
                         </ul>
                         <!-- Copyright -->
