--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
                     <p class="pb-3">My dad is a retired Systems Engineer and I have grown up surrounded by the latest technology. After retiring from snowboarding, I built a website 
                     for my partner's carpentry business, this was the beginning of my interest in computer Science. The realisation of the sheer scope of opportunity, creativity and learning available has left me inspired to 
                     pursue a career in Software Development.</p>
-                    <a href="portfolio.html" class="btn btn-primary btn-blackText mb-5" role="button">View My Work</a>
+                    <a href="portfolio.html" class="btn btn-blackText mb-5" role="button">View My Work</a>
                 </div>
                 <div class="col-md-6 col-xm-12 laptop text-center">
                     <img src="static/laptop1.jpg" alt="laptop">
